--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -199,6 +199,7 @@
             <connections>
                 <outlet property="byLabel" destination="F9Q-xC-IMV" id="4jX-AI-Eh1"/>
                 <outlet property="collectionView" destination="IO7-nw-6KB" id="jh9-Va-oSn"/>
+                <outlet property="postedLabel" destination="eZp-bw-5Yy" id="OaP-26-hV9"/>
                 <outlet property="priceLabel" destination="2D9-dG-k9E" id="o87-Hv-JUL"/>
                 <outlet property="vendorLabel" destination="SSR-4S-9BF" id="PqE-PW-DhV"/>
             </connections>
