--- a/SadAgregator/View/cells/PostCell/CollectionViewCells/SizeCell/SizeCollectionViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/CollectionViewCells/SizeCell/SizeCollectionViewCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -27,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.960834682" green="0.96459835770000002" blue="0.97255879639999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="w34-kJ-BQC" firstAttribute="top" secondItem="VFl-Mb-Pj8" secondAttribute="top" constant="2" id="Fo1-8i-kr3"/>
                             <constraint firstItem="w34-kJ-BQC" firstAttribute="leading" secondItem="VFl-Mb-Pj8" secondAttribute="leading" constant="2" id="ZlU-x4-p8L"/>
@@ -52,9 +51,4 @@
             <point key="canvasLocation" x="152.17391304347828" y="138.61607142857142"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
