--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -8,26 +8,131 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Поставщик-->
         <scene sceneID="Mur-d3-iUu">
             <objects>
-                <viewController id="tgI-Wx-GfF" sceneMemberID="viewController">
+                <viewController id="tgI-Wx-GfF" customClass="PostavshikViewController" customModule="SadAgregator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qTr-YV-iic">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gkI-HL-ayK">
+                                <rect key="frame" x="0.0" y="88" width="390" height="673"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="postavshikTopCell" rowHeight="92" id="lAo-76-Ufm">
+                                        <rect key="frame" x="0.0" y="28" width="390" height="92"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lAo-76-Ufm" id="jzP-Cg-oUd">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="92"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DGG-oK-t6V">
+                                                    <rect key="frame" x="8" y="13.666666666666664" width="65" height="65"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="65" id="0En-uF-7Cc"/>
+                                                        <constraint firstAttribute="height" constant="65" id="UaO-xH-jms"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="S4G-Fj-x5Z">
+                                                    <rect key="frame" x="89" y="13.666666666666666" width="273" height="23.333333333333336"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lxf-y1-BwG" customClass="CosmosView" customModule="Cosmos">
+                                                    <rect key="frame" x="89" y="52.999999999999993" width="135" height="25.666666666666664"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="starSize">
+                                                            <real key="value" value="23"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="updateOnTouch" value="NO"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7Jd-Ni-43l">
+                                                    <rect key="frame" x="304.66666666666669" y="37" width="65.333333333333314" height="44"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nOb-ff-oOx">
+                                                            <rect key="frame" x="0.0" y="0.0" width="65.333333333333329" height="18"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill.checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="yD8-mt-yX1">
+                                                                    <rect key="frame" x="0.0" y="1.9999999999999982" width="22" height="14.666666666666666"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="22" id="iXf-on-Auc"/>
+                                                                        <constraint firstAttribute="height" constant="18" id="iqn-NR-S6h"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="YMw-ZY-IU9">
+                                                                    <rect key="frame" x="30.000000000000004" y="0.0" width="35.333333333333343" height="18"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="82W-fC-K7Q">
+                                                            <rect key="frame" x="0.0" y="26" width="65.333333333333329" height="18"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="6" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="386-tN-oMz">
+                                                                    <rect key="frame" x="0.0" y="-0.33333333333333215" width="18" height="17.666666666666664"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="18" id="66O-zw-x9f"/>
+                                                                        <constraint firstAttribute="height" constant="18" id="8AB-Ul-9OS"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="4AG-Yk-kPQ">
+                                                                    <rect key="frame" x="26.000000000000004" y="0.0" width="39.333333333333343" height="18"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="lxf-y1-BwG" firstAttribute="leading" secondItem="DGG-oK-t6V" secondAttribute="trailing" constant="16" id="8ZX-Zx-1Da"/>
+                                                <constraint firstItem="lxf-y1-BwG" firstAttribute="bottom" secondItem="DGG-oK-t6V" secondAttribute="bottom" id="8ox-gM-o6I"/>
+                                                <constraint firstItem="7Jd-Ni-43l" firstAttribute="bottom" secondItem="jzP-Cg-oUd" secondAttribute="bottomMargin" id="QOk-x7-YM3"/>
+                                                <constraint firstItem="S4G-Fj-x5Z" firstAttribute="leading" secondItem="DGG-oK-t6V" secondAttribute="trailing" constant="16" id="QWW-7n-Zgf"/>
+                                                <constraint firstItem="DGG-oK-t6V" firstAttribute="centerY" secondItem="jzP-Cg-oUd" secondAttribute="centerY" id="Qq6-Q1-1LD"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="7Jd-Ni-43l" secondAttribute="trailing" id="S1X-iD-5QO"/>
+                                                <constraint firstItem="lxf-y1-BwG" firstAttribute="top" secondItem="S4G-Fj-x5Z" secondAttribute="bottom" constant="16" id="SBA-Oi-4FG"/>
+                                                <constraint firstItem="DGG-oK-t6V" firstAttribute="leading" secondItem="jzP-Cg-oUd" secondAttribute="leading" constant="8" id="XNu-iU-5qX"/>
+                                                <constraint firstItem="S4G-Fj-x5Z" firstAttribute="top" secondItem="DGG-oK-t6V" secondAttribute="top" id="eYQ-69-b1E"/>
+                                                <constraint firstItem="7Jd-Ni-43l" firstAttribute="top" secondItem="S4G-Fj-x5Z" secondAttribute="bottom" id="wEb-rb-lfb"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="S4G-Fj-x5Z" secondAttribute="trailing" constant="8" id="xC6-bb-Qpa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="IoR-9T-t2O"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gkI-HL-ayK" firstAttribute="leading" secondItem="IoR-9T-t2O" secondAttribute="leading" id="Uaj-FS-bdS"/>
+                            <constraint firstItem="IoR-9T-t2O" firstAttribute="bottom" secondItem="gkI-HL-ayK" secondAttribute="bottom" id="akI-ue-rmb"/>
+                            <constraint firstItem="IoR-9T-t2O" firstAttribute="trailing" secondItem="gkI-HL-ayK" secondAttribute="trailing" id="oxa-JG-cgA"/>
+                            <constraint firstItem="gkI-HL-ayK" firstAttribute="top" secondItem="IoR-9T-t2O" secondAttribute="top" id="y2b-LD-Bs7"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="eLf-cF-6hX">
+                    <navigationItem key="navigationItem" title="Поставщик" id="eLf-cF-6hX">
                         <rightBarButtonItems>
                             <barButtonItem image="heart" catalog="system" id="I8y-uP-oWV"/>
                             <barButtonItem image="info.circle" catalog="system" id="Pwl-Op-FRg"/>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="gkI-HL-ayK" id="9el-eD-zhu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zpk-ph-JhD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4794" y="2377"/>
+            <point key="canvasLocation" x="-4795.3846153846152" y="2376.5402843601896"/>
         </scene>
         <!--Point View Controller-->
         <scene sceneID="qQs-kk-Ska">
@@ -351,7 +456,7 @@
                     <navigationItem key="navigationItem" id="sDZ-Kd-cXw"/>
                     <connections>
                         <outlet property="tableView" destination="kRI-vX-pSJ" id="H0Y-3i-sG1"/>
-                        <segue destination="tgI-Wx-GfF" kind="show" id="3eo-7Z-uW5"/>
+                        <segue destination="tgI-Wx-GfF" kind="show" identifier="goToPostavshik" id="3eo-7Z-uW5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="koj-j9-MmD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1343,8 +1448,13 @@
             <point key="canvasLocation" x="-1306.1538461538462" y="858.76777251184831"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="lxf-y1-BwG">
+            <size key="intrinsicContentSize" width="135" height="23"/>
+        </designable>
+    </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="3vK-wY-P32"/>
+        <segue reference="LYd-3X-sUB"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="chevron.forward" catalog="system" width="96" height="128"/>
@@ -1357,6 +1467,7 @@
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="multiply" catalog="system" width="128" height="111"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="person.fill.checkmark" catalog="system" width="128" height="88"/>
         <image name="photo" catalog="system" width="128" height="93"/>
         <image name="photo.on.rectangle.fill" catalog="system" width="128" height="96"/>
         <image name="rectangle.fill.on.rectangle.fill" catalog="system" width="128" height="96"/>
